samples/_failures_safe/1761606068_f4549e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e15a1b0.c: In function ‘main’:
./samples/SAFE/__tmp_6e15a1b0.c:162:13: error: expected declaration or statement at end of input
  162 |             } else {
      |             ^
./samples/SAFE/__tmp_6e15a1b0.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e15a1b0.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e15a1b0.c:162:13: error: expected declaration or statement at end of input
